--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,6 +27,8 @@ jobs:
       # Runs a single command using the runners shell
       - name: Set-up Node.js environment
         uses: actions/setup-node@v2-beta
+        with:
+          version: 14
 
    
       - name: GitHub Action for Yarn
