--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,14 +25,13 @@ jobs:
       - uses: actions/checkout@v2
 
       # Runs a single command using the runners shell
-      - name: Set-up Node.js environment
+       - name: set-up Node.js environment
         uses: actions/setup-node@v2-beta
         with:
-          version: 14
+          version: 14 
 
-   
       - name: GitHub Action for Yarn
-        uses: Borales/actions-yarn@2.3.0
+        uses: Borales/actions-yarn@v2.3.0
         with:
           cmd: install
          
